1.9
 * New Features:
   * OptimFROG support.
   * New mutagen.mp4 module with support for multiple data fields per atom
     and more compatible tag saving implementation.
 * mutagen.m4a is deprecated in favor of mutagen.mp4.

1.8 - 2006.10.02
 * New Features:
   * MonkeysAudio support. (#851, Lukáš Lalinský)
   * APEv2 support on Python 2.5; see API-NOTES. (#852)

1.7.1 - 2006.09.24
 * Bug Fixes:
   * Expose full ID3 tag size as .size. (#848)

 * New Features:
   * Musepack Replay Gain data is available in SV7 files.

1.7 - 2006.09.15
 * Bug Fixes:
   * Trying to save an empty tag deletes it. (#813)
   * The semi-public API removal mentioned in 1.6's API-NOTES happened.
   * Stricter frame ID validation. (#830, Lukáš Lalinský)
   * Use os.path.devnull on Win32/Mac OS X. (#831, Lukáš Lalinský)

 * New Features:
   * FLAC cuesheet and seektable support. (#791, Nuutti Kotivuori)
   * Kwargs can be passed to ID3 constructors. (#824, Lukáš Lalinský)
   * mutagen.musepack: Read/tag Musepack files. (#825, Lukáš Lalinský)

 * Tools:
   * mutagen-inspect responds immediately to keyboard interrupts.

1.6 - 2006.08.09
 * Bug Fixes:
   * IOError rather than NameError is raised when File succeeds in
     typefinding but fails in stream parsing.
   * errors= kwarg is correctly interpreted for FLAC tags now.
   * Handle struct.pack API change in Python 2.5b2. (SF #1530559)
   * Metadata 'load' methods always reset in-memory tags.
   * Metadata 'delete' methods always clear in-memory tags.

 * New Features:
   * Vorbis comment vendor strings include the Mutagen version.
   * mutagen.id3: Read ASPI, ETCO, SYTC, MLLT, EQU2, and LINK frames.
   * mutagen.m4a: Read/tag MPEG-4 AAC audio files with iTunes tags. (#681)
   * mutagen.oggspeex: Read/tag Ogg Speex files.
   * mutagen.trueaudio: Read/tag True Audio files.
   * mutagen.wavpack: Read/tag WavPack files.

 * Tools:
   * mid3v2: --delete-frames. (#635)

1.5.1 - 2006.06.26
 * Bug Fixes: